--- a/style.css
+++ b/style.css
@@ -175,3 +175,27 @@ h1{
     margin: 20px;
     font-weight: 400 ;
 }
+#geral2{
+    width: 90%;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    background-color: #f5f5f5f5;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    padding: 20px;
+}
+.cards {
+   height: 320px;  
+   width: 390px;
+   background-color: white;
+}
+.cards > ul {
+    width: 80%;
+    margin: auto;
+}
+#texto {
+    width: 320px;
+    margin: 390px;
+}
